# ttgdt-website-parser

./: .gitignore  main.py  pyproject.toml
src/ttgdtparser/: accumulator.py  aggregator.py  constants.py  exceptions.py  helpers.py  middleware.py  parser.py  types.py  utils.py
src/ttgdtparser/exc/: aggregator.py  base.py  http.py  parser.py  solvers.py
tests/: test_accumulate_lessons.py  test_changes_parsing.py  test_lessons_parsing.py  test_parse_groups.py
tests/extra/: changes.html  groups.html  lessons.html
tests/mock_website/: addictions.html  bootstrap.css  changes.html  groups.html  invalid_group.html  lessons.html
tests/unit/: test_aggregator.py  test_data.py  test_helpers.py  test_parser.py
