[project]
name = "ttgdt-timetable-parser"
version = "2.1.1"
description = "Ttgdt website lessons timetable parser"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pydantic>=2.11.9",
]
keywords = [
    "ttgdt",
    "ttgdt-projects",
    "python",
    "aiohttp",
    "beutifulsoup4",
    "timetable",
    "parser",
    "webscrapper"
]
authors = [
    { name = "Yarko", email = "yarkobout@yandex.ru" },
    { name = "Subitan", email = "nektoanonim2222@gmail.com" }
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttgdtparser"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.idea",
    "**/__pycache__/**",
    "**/*.pyc",
    "tests/**",
    ".*",
]
